# myrobot

./: Báo cáo.txt  CMakeLists.txt  Link Báo cáo.txt  Link Video.txt  README.md  package.xml  pta2004  pta2004.pub
config/: arm_controller.yaml  arm_controller.yaml.save  base_controller.yaml
launch/: empty_world.launch
meshes/: arm_base_link.STL  arm_joint1_link.STL  arm_joint2_link.STL  camera_link.STL  imu_link.STL  motor_left_link.STL  motor_right_link.STL
rviz/: myrobot.rviz
scripts/: keyboard.py
urdf/: myrobot.csv  myrobot.urdf
worlds/: myworld.world
